tests/error/err-hash-1.scm
(define h (hash 1 2 3 4 5))

(hash-ref h 1)
